removed dead variable